# ls3p

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/rpc/: main.cpp
include/ls3p/: jsonrpc.hpp  server.hpp  transport.hpp
include/ls3p/messages/: AnnotatedTextEdit.hpp  ChangeAnnotation.hpp  ClientCapabilities.hpp  CodeDescription.hpp  Command.hpp  Diagnostic.hpp  DiagnosticRelatedInformation.hpp  InitializeParams.hpp  Location.hpp  LocationLink.hpp  OptionalVersionedTextDocumentIdentifier.hpp  Position.hpp  Range.hpp  TextDocumentClientCapabilities.hpp  TextDocumentEdit.hpp  TextDocumentIdentifier.hpp  TextEdit.hpp  base.hpp  caps.hpp  common.hpp  core.hpp  diagnostic.hpp  filechanges.hpp  location.hpp  textdoc.hpp  textedit.hpp  textid.hpp  workspace.hpp  workspaceedit.hpp
include/ls3p/messages/base/: CancelParams.hpp  NotificationMessage.hpp  ProgressParams.hpp  RequestMessage.hpp  ResponseError.hpp  ResponseMessage.hpp  cancel.hpp  message.hpp  notification.hpp  progress.hpp  request.hpp  response.hpp
include/ls3p/messages/caps/: ClientCapabilities.hpp  TextDocumentClientCapabilities.hpp
include/ls3p/messages/core/: Command.hpp  Diagnostic.hpp  Location.hpp  LocationLink.hpp  Markup.hpp  Position.hpp  Progress.hpp  Range.hpp  (+16 more)
include/ls3p/structs/: client.hpp  common.hpp  core.hpp  general.hpp  lang.hpp  telemetry.hpp  window.hpp  workspace.hpp
include/ls3p/util/: exceptions.hpp  serializers.hpp
src/: jsonrpc.cpp  server.cpp
tests/: CMakeLists.txt
tests/jsontests/: basemessages.cpp  complex.cpp  includeall.cpp  rpc.cpp  stdtypes.cpp
(+34 files in other folders)
